--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Photo Gallery</title>
 	<link rel="stylesheet" href="../CSS/gallery.css">
-	<script src = "../javaScript/test.js"></script>
+	<script src = "../javaScript/gallery.js"></script>
 </head>
 <body>
 	
